[package]
name = "derive-refineable-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
description = "A derive macro for creating refinement types in Rust"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/derive_refineable.rs"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { version = "1.0.93" }
quote = { version = "1.0.9" }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }

[workspace]
