[package]
name = "gpui-linux-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/gpui_linux.rs"

[features]
default = ["wayland", "x11"]
test-support = ["gpui/test-support"]
wayland = [
    "bitflags",
    "gpui_wgpu",
    "ashpd/wayland",

    "calloop-wayland-source",
    "wayland-backend",
    "wayland-client",
    "wayland-cursor",
    "wayland-protocols",
    "wayland-protocols-plasma",
    "wayland-protocols-wlr",
    "filedescriptor",
    "xkbcommon",
    "open",
    "gpui/wayland",
]
x11 = [
    "gpui_wgpu",
    "ashpd",

    "as-raw-xcb-connection",
    "x11rb",
    "xkbcommon",
    "xim",
    "x11-clipboard",
    "filedescriptor",
    "open",
    "scap?/x11",
]
screen-capture = [
    "gpui/screen-capture",
    "scap",
]


[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
anyhow = { version = "1.0.86" }
bytemuck = "1"
collections = { package = "collections-unofficial", version = "0.230.1" }
futures = { version = "0.3" }
gpui = { package = "gpui-unofficial", version = "0.230.1" }
gpui_wgpu = { package = "gpui-wgpu-unofficial", version = "0.230.1", features = ["font-kit"], optional = true }
http_client = { package = "http-client-unofficial", version = "0.230.1" }
itertools = { version = "0.14.0" }
libc = { version = "0.2" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
parking_lot = { version = "0.12.1" }
pathfinder_geometry = "0.5"
pollster = { version = "0.4.0" }
profiling = { version = "1" }
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = { version = "2.0" }
strum = { version = "0.27.2", features = ["derive"] }
url = { version = "2.2" }
util = { package = "util-unofficial", version = "0.230.1" }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }

# Always used
oo7 = { version = "0.6", default-features = false, features = [
    "async-std",
    "native_crypto",
] }
calloop = "0.14.3"
raw-window-handle = "0.6"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
], optional = true }
swash = { version = "0.2.6" }
bitflags = { version = "2.6.0", optional = true }
filedescriptor = { version = "0.8.2", optional = true }
open = { version = "5.2.0", optional = true }
xkbcommon = { version = "0.8.0", features = ["wayland", "x11"], optional = true }
scap = { version = "0.0.8-zed", package = "zed-scap", git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, optional = true }

# Wayland
calloop-wayland-source = { version = "0.4.1", optional = true }
wayland-backend = { version = "0.3.3", features = [
    "client_system",
    "dlopen",
], optional = true }
wayland-client = { version = "0.31.11", optional = true }
wayland-cursor = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", features = [
    "client",
    "staging",
    "unstable",
], optional = true }
wayland-protocols-plasma = { version = "0.3.9", features = [
    "client",
], optional = true }
wayland-protocols-wlr = { version = "0.3.9", features = [
    "client",
], optional = true }

# X11
as-raw-xcb-connection = { version = "1", optional = true }
x11rb = { version = "0.13.1", features = [
    "allow-unsafe-code",
    "xkb",
    "randr",
    "xinput",
    "cursor",
    "resource_manager",
    "sync",
    "dri3",
], optional = true }
# WARNING: If you change this, you must also publish a new version of zed-xim to crates.io
xim = { git = "https://github.com/zed-industries/xim-rs.git", rev = "16f35a2c881b815a2b6cdfd6687988e84f8447d8", features = [
    "x11rb-xcb",
    "x11rb-client",
], package = "zed-xim", version = "0.4.0-zed", optional = true }
x11-clipboard = { version = "0.9.3", optional = true }

[workspace]
