[package]
name = "gpui-macos-gpui-unofficial"
version = "1.8.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/iamnbutler/gpui-unofficial"
description = "Unofficial release of Zed's gpui_macos crate"

[lib]
path = "src/gpui_macos.rs"

[features]
default = ["gpui/default"]
test-support = ["gpui/test-support"]
runtime_shaders = []
font-kit = ["dep:font-kit"]
screen-capture = ["gpui/screen-capture"]

[dependencies]
gpui = { package = "gpui-unofficial", version = "1.8.2" }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit = { version = "0.24.0" }
accesskit_macos = { version = "0.26.0" }
anyhow = { version = "1.0.86" }
async-task = "4.7"
block = "0.1"
cocoa = { version = "=0.26.0" }
collections = { package = "collections-gpui-unofficial", version = "1.8.2" }
core-foundation = { version = "=0.10.0" }
core-foundation-sys = { version = "0.8.6" }
core-graphics = "0.24"
core-text = "21"
core-video = { version = "0.5.2", features = ["metal"] }
ctor = { version = "1.0.6" }
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not"] }
dispatch2 = "0.3.1"
etagere = "0.2"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
futures = { version = "0.3.32" }
gpui_util = { package = "gpui-util-gpui-unofficial", version = "1.8.2" }
image = { version = "0.25.1" }
itertools = { version = "0.14.0" }
libc = { version = "0.2" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = { version = "0.5" }
media = { package = "media-gpui-unofficial", version = "1.8.2" }
metal = { version = "0.33" }
objc = { version = "0.2" }
objc2 = { version = "0.6" }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSButton",
    "NSControl",
    "NSGraphics",
    "NSResponder",
    "NSView",
    "NSWindow",
    "objc2-core-foundation"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std"] }
parking_lot = { version = "0.12.1" }
pathfinder_geometry = "0.5"
raw-window-handle = "0.6"
semver = { version = "1.0", features = ["serde"] }
smallvec = { version = "1.6", features = ["union", "const_new"] }
strum = { version = "0.27.2", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }
gpui = { package = "gpui-unofficial", version = "1.8.2" }

# When this crate is itself being tested (cargo test -p gpui_macos), its own
# cfg(test) flag enables impls of test-only traits like PlatformHeadlessRenderer
# and PlatformWindow::render_to_image. Those traits/methods only exist in gpui
# when gpui's `test-support` feature is on, so we have to turn that feature on
# as a dev-dependency. The `cfg(test)` flag of a dependent crate doesn't
# propagate to its dependencies, but dev-dependencies do, so this is the
# correct way to enable the feature exactly when needed.
[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui = { package = "gpui-unofficial", version = "1.8.2", features = ["test-support"] }

[lints]
rust = { unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] } }

[workspace]
