[package]
name = "gpui-macos-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/gpui_macos.rs"

[features]
default = ["gpui/default"]
test-support = ["gpui/test-support"]
runtime_shaders = []
font-kit = ["dep:font-kit"]
screen-capture = ["gpui/screen-capture"]

[dependencies]
gpui = { package = "gpui-unofficial", version = "0.230.1" }

[target.'cfg(target_os = "macos")'.dependencies]
anyhow = { version = "1.0.86" }
async-task = "4.7"
block = "0.1"
cocoa = { version = "=0.26.0" }
collections = { package = "collections-unofficial", version = "0.230.1" }
core-foundation = { version = "=0.10.0" }
core-foundation-sys = { version = "0.8.6" }
core-graphics = "0.24"
core-text = "21"
core-video = { version = "0.5.2", features = ["metal"] }
ctor = { version = "0.4.0" }
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "from_str",
    "mul",
    "mul_assign",
    "not"] }
dispatch2 = "0.3.1"
etagere = "0.2"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
futures = { version = "0.3" }
image = { version = "0.25.1" }
itertools = { version = "0.14.0" }
libc = { version = "0.2" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = { version = "0.5" }
media = { package = "media-unofficial", version = "0.230.1" }
metal = { version = "0.33" }
objc = { version = "0.2" }
parking_lot = { version = "0.12.1" }
pathfinder_geometry = "0.5"
raw-window-handle = "0.6"
semver = { version = "1.0", features = ["serde"] }
smallvec = { version = "1.6", features = ["union", "const_new"] }
strum = { version = "0.27.2", features = ["derive"] }
util = { package = "util-unofficial", version = "0.230.1" }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }
gpui = { package = "gpui-unofficial", version = "0.230.1" }

[workspace]
