[package]
name = "gpui-platform-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/gpui_platform.rs"

[features]
default = []
font-kit = ["gpui_macos/font-kit"]
test-support = ["gpui/test-support", "gpui_macos/test-support"]
screen-capture = ["gpui/screen-capture", "gpui_macos/screen-capture", "gpui_windows/screen-capture", "gpui_linux/screen-capture"]
runtime_shaders = ["gpui_macos/runtime_shaders"]
wayland = ["gpui_linux/wayland"]
x11 = ["gpui_linux/x11"]

[dependencies]
gpui = { package = "gpui-unofficial", version = "0.230.1" }

[target.'cfg(target_os = "macos")'.dependencies]
gpui_macos = { package = "gpui-macos-unofficial", version = "0.230.1" }

[target.'cfg(target_os = "windows")'.dependencies]
gpui_windows = { package = "gpui-windows-unofficial", version = "0.230.1" }
gpui = { package = "gpui-unofficial", version = "0.230.1", features = ["windows-manifest"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui_linux = { package = "gpui-linux-unofficial", version = "0.230.1" }

[target.'cfg(target_family = "wasm")'.dependencies]
gpui_web = { package = "gpui-web-unofficial", version = "0.230.1" }
console_error_panic_hook = "0.1.7"

[workspace]
