[package]
name = "gpui-shared-string-gpui-unofficial"
version = "0.233.5"
edition = "2024"
repository = "https://github.com/iamnbutler/gpui-unofficial"
license = "Apache-2.0"
description = "Unofficial release of Zed's gpui_shared_string crate"

[lib]
path = "gpui_shared_string.rs"

[dependencies]
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not"] }
gpui_util = { package = "gpui-util-gpui-unofficial", version = "0.233.5" }
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }

[workspace]
