[package]
name = "gpui-unofficial"
version = "0.231.1"
edition = "2024"
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "Zed's GPU-accelerated UI framework"
repository = "https://github.com/iamnbutler/gpui-unofficial"
license = "Apache-2.0"
homepage = "https://gpui.rs"
readme = "README.md"
keywords = ["desktop", "gui", "immediate"]
categories = ["gui"]

[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support = [
    "leak-detection",
    "collections/test-support",
    "http_client/test-support",
    "wayland",
    "x11"]
leak-detection = ["backtrace"]
wayland = [
    "bitflags",
]
x11 = [
    "scap?/x11",
]
screen-capture = [
    "scap",
]
windows-manifest = ["dep:embed-resource"]

[lib]
path = "src/gpui.rs"
doctest = false

[dependencies]
anyhow = { version = "1.0.86" }
async-task = "4.7"
backtrace = { version = "0.3", optional = true }
bitflags = { version = "2.6.0", optional = true }
collections = { package = "collections-gpui-unofficial", version = "0.231.1" }
ctor = { version = "0.4.0" }
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "from_str",
    "mul",
    "mul_assign",
    "not"] }
etagere = "0.2"
futures = { version = "0.3" }
futures-concurrency = { version = "7.7.1" }
gpui_macros = { package = "gpui-macros-gpui-unofficial", version = "0.231.1" }
http_client = { package = "http-client-gpui-unofficial", version = "0.231.1" }
image = { version = "0.25.1" }
inventory = { version = "0.3.19" }
itertools = { version = "0.14.0" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
num_cpus = "1.13"
parking = "2.0.0"
parking_lot = { version = "0.12.1" }
postage = { version = "0.5", features = ["futures-traits"] }
chrono = { version = "0.4", features = ["serde"] }
profiling = { version = "1" }
rand = { version = "0.9" }
raw-window-handle = "0.6"
regex = { version = "1.5" }
refineable = { package = "refineable-gpui-unofficial", version = "0.231.1" }
scheduler = { package = "scheduler-gpui-unofficial", version = "0.231.1" }
resvg = { version = "0.45.0", default-features = false, features = [
    "text",
    "system-fonts",
    "memmap-fonts",
    "raster-images"
] }
usvg = { version = "0.45.0", default-features = false }
ttf-parser = "0.25"
util_macros = { package = "util-macros-gpui-unofficial", version = "0.231.1" }
schemars = { version = "1.0", features = ["indexmap2"] }
seahash = "4.1"
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
slotmap = { version = "1.0.6" }
smallvec = { version = "1.6", features = ["union", "const_new"] }
async-channel = { version = "2.5.0" }
stacksafe = { version = "0.1" }
strum = { version = "0.27.2", features = ["derive"] }
sum_tree = { package = "sum-tree-gpui-unofficial", version = "0.231.1" }
taffy = "=0.9.0"
thiserror = { version = "2.0.12" }
gpui_util = { package = "gpui-util-gpui-unofficial", version = "0.231.1" }
waker-fn = "1.2.0"
lyon = "1.0"
pin-project = "1.1.10"
spin = "0.10.0"
pollster = { version = "0.4.0" }
url = { version = "2.2" }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
web-time = { version = "1.1.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.1.2", features = ["js"] }


[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa = { version = "=0.26.0" }
cocoa-foundation = { version = "=0.2.0" }
core-foundation = { version = "=0.10.0" }
core-foundation-sys = { version = "0.8.6" }
core-graphics = "0.24"
core-video = { version = "0.5.2", features = ["metal"] }
core-text = "21"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
media = { package = "media-gpui-unofficial", version = "0.231.1" }
objc = { version = "0.2" }
objc2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
mach2 = { version = "0.5" }
metal = { version = "0.33" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dependencies]
pathfinder_geometry = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows"))'.dependencies]
scap = { version = "0.0.8-zed", package = "zed-scap", default-features = false, optional = true }



[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation"] }


[dev-dependencies]
backtrace = { version = "0.3" }
collections = { package = "collections-gpui-unofficial", version = "0.231.1", features = ["test-support"] }
env_logger = { version = "0.11" }
gpui_platform = { package = "gpui-platform-gpui-unofficial", version = "0.231.1", features = ["font-kit"] }
gpui_util = { package = "gpui-util-gpui-unofficial", version = "0.231.1" }
lyon = { version = "1.0", features = ["extra"] }
rand = { version = "0.9" }
scheduler = { package = "scheduler-gpui-unofficial", version = "0.231.1", features = ["test-support"] }
unicode-segmentation = { version = "1.10" }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
http_client = { package = "http-client-gpui-unofficial", version = "0.231.1", features = ["test-support"] }
reqwest_client = { package = "reqwest-client-gpui-unofficial", version = "0.231.1", features = ["test-support"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen = { version = "0.2.113" }
gpui_web = { package = "gpui-web-gpui-unofficial", version = "0.231.1" }

[build-dependencies]
embed-resource = { version = "3.0", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.71"
cbindgen = { version = "0.28.0", default-features = false }
naga = { version = "29.0", features = ["wgsl-in"] }




[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "image"
path = "examples/image/image.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "on_window_close_quit"
path = "examples/on_window_close_quit.rs"

[[example]]
name = "opacity"
path = "examples/opacity.rs"

[[example]]
name = "pattern"
path = "examples/pattern.rs"

[[example]]
name = "set_menus"
path = "examples/set_menus.rs"

[[example]]
name = "shadow"
path = "examples/shadow.rs"

[[example]]
name = "svg"
path = "examples/svg/svg.rs"

[[example]]
name = "tab_stop"
path = "examples/tab_stop.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "text_wrapper"
path = "examples/text_wrapper.rs"

[[example]]
name = "tree"
path = "examples/tree.rs"

[[example]]
name = "uniform_list"
path = "examples/uniform_list.rs"

[[example]]
name = "window_shadow"
path = "examples/window_shadow.rs"

[[example]]
name = "grid_layout"
path = "examples/grid_layout.rs"

[[example]]
name = "list_example"
path = "examples/list_example.rs"

[[example]]
name = "mouse_pressure"
path = "examples/mouse_pressure.rs"

[workspace]
