[package]
name = "gpui-web-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
autoexamples = false
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[features]
default = ["multithreaded"]
multithreaded = ["dep:wasm_thread"]

[lib]
path = "src/gpui_web.rs"

[target.'cfg(target_family = "wasm")'.dependencies]
gpui = { package = "gpui-unofficial", version = "0.230.1" }
parking_lot = { version = "0.12.1", features = ["nightly"] }
gpui_wgpu = { package = "gpui-wgpu-unofficial", version = "0.230.1" }
http_client = { package = "http-client-unofficial", version = "0.230.1" }
anyhow = { version = "1.0.86" }
futures = { version = "0.3" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
smallvec = { version = "1.6", features = ["union", "const_new"] }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
wasm-bindgen = { version = "0.2.113" }
wasm-bindgen-futures = "0.4"
web-time = { version = "1.1.0" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
raw-window-handle = "0.6"
wasm_thread = { version = "0.3", features = ["es_modules"], optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "CompositionEvent",
    "CssStyleDeclaration",
    "DataTransfer",
    "Document",
    "DomRect",
    "DragEvent",
    "Element",
    "EventTarget",
    "File",
    "FileList",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "Navigator",
    "PointerEvent",
    "ResizeObserver",
    "ResizeObserverBoxOptions",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "ResizeObserverOptions",
    "Screen",
    "Storage",
    "VisualViewport",
    "Headers",
    "Request",
    "RequestInit",
    "RequestRedirect",
    "Response",
    "WheelEvent",
    "Window",
] }

[workspace]
