[package]
name = "gpui-wgpu-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/gpui_wgpu.rs"

[features]
default = []
font-kit = ["dep:font-kit"]

[dependencies]
gpui = { package = "gpui-unofficial", version = "0.230.1" }
anyhow = { version = "1.0.86" }
bytemuck = "1"
collections = { package = "collections-unofficial", version = "0.230.1" }
cosmic-text = "0.17.0"
etagere = "0.2"
itertools = { version = "0.14.0" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
parking_lot = { version = "0.12.1" }
profiling = { version = "1" }
raw-window-handle = "0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
swash = "0.2.6"
gpui_util = { package = "gpui-util-unofficial", version = "0.230.1" }
wgpu = { git = "https://github.com/zed-industries/wgpu.git", branch = "v29" }

# Optional: only needed on platforms with multiple font sources (e.g. Linux)
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = { version = "0.4.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.113" }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
js-sys = "0.3"

[workspace]
