[package]
name = "media-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
description = "Bindings to macos media handling APIs for Zed"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/media.rs"
doctest = false

[dependencies]
anyhow = { version = "1.0.86" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "=0.10.0" }
ctor = { version = "0.4.0" }
foreign-types = "0.5"
metal = { version = "0.33" }
core-video = { version = "0.5.2", features = ["metal"] }
objc = { version = "0.2" }

[build-dependencies]
bindgen = "0.71"

[workspace]
