[package]
name = "perf-gpui-unofficial"
version = "1.0.1"
edition = "2024"
license = "Apache-2.0"
description = "A tool for measuring Zed test performance, with too many Clippy lints"
repository = "https://github.com/iamnbutler/gpui-unofficial"

[lib]

[dependencies]
collections = { package = "collections-gpui-unofficial", version = "1.0.1" }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }

[workspace]
